# compas_rrc_ros

./: .editorconfig  .gitattributes  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  package.xml  requirements-dev.txt  setup.cfg  setup.py
.docker/: ros_catkin_entrypoint.sh
.docker/dev-container/: Untitled-1.txt  docker-compose.yml
.docker/dev-container/scripts/: main.launch
.github/workflows/: build-image.yml
examples/1-controller-2-robots/: docker-compose.yml
examples/1-controller-real/: docker-compose.yml
examples/1-controller-virtual/: docker-compose.yml
examples/2-controllers/: docker-compose.yml
launch/: bringup-1_2.launch  bringup-1_2_3.launch  bringup-1_2_3_4.launch  bringup-2-robots.launch  bringup-common.launch  bringup.launch  client-mode.launch  server-mode.launch
msg/: AbbMessage.msg  RobotMessage.msg  x.lua
scripts/: test_client.py  test_server_blocking.py  test_server_mode.py
src/abb_042_driver/: abb_message.proto  driver.py  driver.py~  message.py  protocol.py  services.py  topics.py
src/compas_rrc_driver/: driver.py  event_emitter.py  message.py  protocol.py  robot_message.proto  services.py  topics.py
src/compas_rrc_driver/abb/: Untitled-1.json  __init__.py  draft.py  parser.py  webservice.py  webservice_client.py
srv/: AbbMessageCommand.srv  RobotMessageCommand.srv  StringCommand.srv
tests/: test_sequence_counter.py
